OPTIMUS-36426 export changes from 2c71ca673714b456d7a26ae2170b5c0fb96f78d9